@@ -391,7 +391,7 @@ class seasons:
                 except: pass
 
                 self.list.append({'title': title, 'label': label, 'season': season, 'episode': episode, 'tvshowtitle': tvshowtitle, 'year': year, 'premiered': premiered, 'status': status, 'studio': studio, 'genre': genre, 'duration': duration, 'rating': rating, 'votes': votes, 'mpaa': mpaa, 'director': director, 'writer': writer, 'cast': cast, 'plot': episodeplot, 'imdb': imdb, 'tvdb': tvdb, 'poster': poster, 'banner': banner, 'fanart': fanart, 'thumb': thumb, 'unaired': unaired})
-                self.list = sorted(self.list, key=lambda k: int(k['episode']))
+                self.list = sorted(self.list, key=lambda k: (int(k['season']), int(k['episode'])))
             except:
                 pass
 
